--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ArticleOrtuActivity"
+        <activity android:name=".ArticleBalitaActivity"
             android:label="Article Balita"></activity>
+        <activity android:name=".ArticleOrtuActivity"
+            android:label="Article Orang Tua"></activity>
         <activity android:name=".MenuActivity"
             android:label="Adek Lita"></activity>
         <activity android:name=".MenuBalitaActivity"
